Change the name of class Conteeeeeeeext.cs to Context.cs. Add the date field to the statistics table.

--- a/KeyboardWIndowApp.csproj
+++ b/KeyboardWIndowApp.csproj
@@ -169,7 +169,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataBase\Conteeeeeeeext.cs" />
+    <Compile Include="DataBase\Context.cs" />
     <Compile Include="DataBase\Difficulty.cs" />
     <Compile Include="DataBase\Exercise.cs" />
     <Compile Include="DataBase\Keyboard.cs" />
