--- a/KeyboardWIndowApp.csproj
+++ b/KeyboardWIndowApp.csproj
@@ -175,6 +175,12 @@
     <Compile Include="AdminForm.Designer.cs">
       <DependentUpon>AdminForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="CreateExercise.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CreateExercise.Designer.cs">
+      <DependentUpon>CreateExercise.cs</DependentUpon>
+    </Compile>
     <Compile Include="DataBase\Context.cs" />
     <Compile Include="DataBase\Difficulty.cs" />
     <Compile Include="DataBase\Exercise.cs" />
@@ -213,6 +219,9 @@
     <Compile Include="StaticClasses\UserWork.cs" />
     <EmbeddedResource Include="AdminForm.resx">
       <DependentUpon>AdminForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CreateExercise.resx">
+      <DependentUpon>CreateExercise.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="DifficultyForm.resx">
       <DependentUpon>DifficultyForm.cs</DependentUpon>
