--- a/KeyboardWIndowApp.csproj
+++ b/KeyboardWIndowApp.csproj
@@ -202,6 +202,10 @@
     <Compile Include="ExerciseForm.Designer.cs">
       <DependentUpon>ExerciseForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\20221126164001_madeDB2.cs" />
+    <Compile Include="Migrations\20221126164001_madeDB2.designer.cs">
+      <DependentUpon>20221126164001_madeDB2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
