--- a/KeyboardWIndowApp.csproj
+++ b/KeyboardWIndowApp.csproj
@@ -202,6 +202,12 @@
     <Compile Include="ExerciseForm.Designer.cs">
       <DependentUpon>ExerciseForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="InfoForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="InfoForm.Designer.cs">
+      <DependentUpon>InfoForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\20221126164001_madeDB2.cs" />
     <Compile Include="Migrations\20221126164001_madeDB2.designer.cs">
       <DependentUpon>20221126164001_madeDB2.cs</DependentUpon>
