--- a/App.config
+++ b/App.config
@@ -3,6 +3,10 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+  <appSettings>
+    <add key="keyCheck" value="1"/>
+    <add key="musicCheck" value="1"/>
+  </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
