--- a/KeyboardWIndowApp.csproj
+++ b/KeyboardWIndowApp.csproj
@@ -211,6 +211,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="SettingUser.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SettingUser.Designer.cs">
+      <DependentUpon>SettingUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="StaticClasses\ExerciseWork.cs" />
     <Compile Include="LogInForm.cs">
       <SubType>Form</SubType>
@@ -254,6 +260,9 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SettingUser.resx">
+      <DependentUpon>SettingUser.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UserForm.resx">
       <DependentUpon>UserForm.cs</DependentUpon>
