--- a/KeyboardWIndowApp.csproj
+++ b/KeyboardWIndowApp.csproj
@@ -157,6 +157,7 @@
     <Reference Include="System.ValueTuple, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>packages\System.ValueTuple.4.5.0\lib\net47\System.ValueTuple.dll</HintPath>
     </Reference>
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -190,6 +191,12 @@
     <Compile Include="DataBase\Statistics.cs" />
     <Compile Include="DataBase\TypeZone.cs" />
     <Compile Include="DataBase\User.cs" />
+    <Compile Include="DiagrammForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DiagrammForm.Designer.cs">
+      <DependentUpon>DiagrammForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="DifficultyForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -235,6 +242,12 @@
     <Compile Include="StaticClasses\KeyboardWork.cs" />
     <Compile Include="StaticClasses\TypeZoneWork.cs" />
     <Compile Include="StaticClasses\UserWork.cs" />
+    <Compile Include="StatisticForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="StatisticForm.Designer.cs">
+      <DependentUpon>StatisticForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="UserForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -246,6 +259,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="CreateExercise.resx">
       <DependentUpon>CreateExercise.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DiagrammForm.resx">
+      <DependentUpon>DiagrammForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="DifficultyForm.resx">
       <DependentUpon>DifficultyForm.cs</DependentUpon>
@@ -263,6 +279,9 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="StatisticForm.resx">
+      <DependentUpon>StatisticForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UserForm.resx">
       <DependentUpon>UserForm.cs</DependentUpon>
